# imag

./: .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  default.nix  imagrc.toml
doc/src/: 00000.md  02000-store.md  03010-conventions.md  03020-writing-modules.md  04020-module-health.md  04020-module-ingredient.md  04020-module-mails.md  04020-module-todo.md  05100-lib-entryref.md  05100-lib-entrytemplate.md  05100-lib-todo.md  09010-contributing.md  09020-changelog.md
lib/core/libimagerror/: Cargo.toml
lib/core/libimagerror/src/: errors.rs  exit.rs  io.rs  iter.rs  lib.rs  str.rs  trace.rs
lib/core/libimagrt/: Cargo.toml
lib/core/libimagrt/src/: configuration.rs  io.rs  lib.rs  logger.rs  runtime.rs  setup.rs  spec.rs  version.rs
lib/core/libimagstore/: Cargo.toml
lib/core/libimagstore/src/: configuration.rs  iter.rs  lib.rs  store.rs  storeid.rs  util.rs
lib/core/libimagstore/src/file_abstraction/: fs.rs  inmemory.rs  iter.rs  mod.rs
lib/domain/libimagbookmark/: Cargo.toml
lib/domain/libimagbookmark/src/: collection.rs  lib.rs  link.rs
lib/domain/libimagcontact/: Cargo.toml
lib/domain/libimagcontact/src/: contact.rs  deser.rs  error.rs  iter.rs  lib.rs  store.rs  util.rs
lib/domain/libimagdiary/: Cargo.toml
lib/domain/libimagdiary/src/: config.rs  diary.rs  diaryid.rs  entry.rs  is_in_diary.rs  iter.rs  lib.rs  viewer.rs
lib/domain/libimaghabit/: Cargo.toml
lib/domain/libimaghabit/src/: habit.rs  instance.rs  iter.rs  lib.rs  store.rs  util.rs
lib/domain/libimaglog/: Cargo.toml
lib/domain/libimaglog/src/: lib.rs  log.rs
lib/domain/libimagmail/: Cargo.toml
lib/domain/libimagmail/src/: config.rs  fetch.rs  hasher.rs  iter.rs  lib.rs  mail.rs  mid.rs  send.rs  store.rs  util.rs
lib/domain/libimagnotes/: Cargo.toml
lib/domain/libimagnotes/src/: iter.rs  lib.rs  note.rs  notestore.rs  notestoreid.rs
lib/domain/libimagtimetrack/: Cargo.toml
lib/domain/libimagtimetrack/src/: constants.rs  lib.rs  tag.rs  timetracking.rs  timetrackingstore.rs
lib/domain/libimagtimetrack/src/iter/: create.rs  filter.rs  get.rs  mod.rs  setendtime.rs  storeid.rs  tag.rs
lib/domain/libimagtodo/: Cargo.toml
lib/domain/libimagtodo/src/: iter.rs  lib.rs  task.rs  taskstore.rs
lib/domain/libimagwiki/: Cargo.toml
lib/domain/libimagwiki/src/: entry.rs  lib.rs  store.rs  wiki.rs
lib/entry/libimagentryannotation/: Cargo.toml
lib/entry/libimagentryannotation/src/: annotateable.rs  annotation_fetcher.rs  iter.rs  lib.rs
lib/entry/libimagentrycategory/: Cargo.toml
lib/entry/libimagentrycategory/src/: category.rs  entry.rs  iter.rs  lib.rs  store.rs
lib/entry/libimagentrydatetime/: Cargo.toml
lib/entry/libimagentrydatetime/src/: datetime.rs  lib.rs  range.rs
lib/entry/libimagentrydatetime/src/datepath/: accuracy.rs  compiler.rs  format.rs  mod.rs  to_store_id.rs
lib/entry/libimagentryedit/: Cargo.toml
lib/entry/libimagentryedit/src/: edit.rs  lib.rs
lib/entry/libimagentryfilter/: Cargo.toml
lib/entry/libimagentryfilter/src/: lib.rs
lib/entry/libimagentryfilter/src/builtin/: bool_filter.rs  mod.rs
lib/entry/libimagentryfilter/src/builtin/content/: grep.rs  mod.rs
lib/entry/libimagentryfilter/src/builtin/content/length/: is_over.rs  is_under.rs  mod.rs
lib/entry/libimagentryfilter/src/builtin/header/: field_eq.rs  field_exists.rs  field_grep.rs  field_gt.rs  field_isempty.rs  field_istype.rs  field_lt.rs  field_path.rs  field_predicate.rs  mod.rs
lib/entry/libimagentryfilter/src/builtin/header/version/: eq.rs  gt.rs  lt.rs  mod.rs  range.rs
lib/entry/libimagentryfilter/src/tags/: mod.rs
lib/entry/libimagentrygps/: Cargo.toml
lib/entry/libimagentrygps/src/: entry.rs  lib.rs  types.rs
lib/entry/libimagentrylink/: Cargo.toml
lib/entry/libimagentrylink/src/: external.rs  internal.rs  lib.rs
lib/entry/libimagentrymarkdown/: Cargo.toml
lib/entry/libimagentrymarkdown/src/: html.rs  lib.rs  link.rs  processor.rs
lib/entry/libimagentryref/: Cargo.toml
lib/entry/libimagentryref/src/: hasher.rs  lib.rs  reference.rs  refstore.rs  util.rs
lib/entry/libimagentryref/src/generators/: base.rs  mod.rs
lib/entry/libimagentrytag/: Cargo.toml
lib/entry/libimagentrytag/src/: lib.rs  tag.rs  tagable.rs
lib/entry/libimagentrytemplate/: Cargo.toml  README.md
lib/entry/libimagentrytemplate/src/: error.rs  instance.rs  lib.rs  template.rs
lib/entry/libimagentryutil/: Cargo.toml
lib/entry/libimagentryutil/src/: isa.rs  isincollection.rs  iter.rs  lib.rs
lib/entry/libimagentryview/: Cargo.toml
lib/entry/libimagentryview/src/: lib.rs  viewer.rs
lib/entry/libimagentryview/src/builtin/: editor.rs  md.rs  mod.rs  plain.rs  stdout.rs
lib/etc/libimaginteraction/: Cargo.toml
lib/etc/libimaginteraction/src/: ask.rs  filter.rs  format.rs  lib.rs  readline.rs  ui.rs
lib/etc/libimagnotification/: Cargo.toml
lib/etc/libimagnotification/src/: lib.rs  notificator.rs  result_notification.rs
lib/etc/libimagtimeui/: Cargo.toml
lib/etc/libimagtimeui/src/: cli.rs  date.rs  datetime.rs  lib.rs  parse.rs  time.rs  ui.rs
lib/etc/libimagutil/: Cargo.toml
lib/etc/libimagutil/src/: cli_validators.rs  date.rs  debug_option.rs  debug_result.rs  edit.rs  info_option.rs  info_result.rs  key_value_split.rs  lib.rs  log_option.rs  log_result.rs  testing.rs  variants.rs  warn_exit.rs  warn_result.rs
lib/tui/libimagtui/: Cargo.toml
lib/tui/libimagtui/examples/: storeid_tree.rs
lib/tui/libimagtui/src/: error.rs  lib.rs  storeid_explorer.rs  util.rs
lib/tui/libimagtui/src/views/: mod.rs  storeid.rs
scripts/: release.sh  which-commands-changed
scripts/hooks/: commit-msg.signoffby-missing-warn.sh  sendemail-validate.signoffby-missing-warn.sh
