[package]
name = "libimagrt"
version = "0.9.1"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
env_logger = "0.5"
toml = "0.4"
xdg-basedir = "1.0"
itertools = "0.7"
ansi_term = "0.11"
toml-query = "0.8"
atty = "0.2"
failure        = "0.1"
failure_derive = "0.1"

libimagstore       = { version = "0.9.1", path = "../../../lib/core/libimagstore" }
libimagerror       = { version = "0.9.1", path = "../../../lib/core/libimagerror" }
libimagutil        = { version = "0.9.1", path = "../../../lib/etc/libimagutil" }
libimaginteraction = { version = "0.9.1", path = "../../../lib/etc/libimaginteraction" }

[dependencies.clap]
version = "^2.29"
default-features = false
features = ["suggestions", "color", "wrap_help"]

[dependencies.log]
version = "0.4"
default-features = false
features = ["std"]

[dependencies.handlebars]
version          = "^1.0.5"
default-features = false
features         = ["no_logging"]

[features]
default = []

# Make logger initialization inside `runtime::Runtime` public.
# This feature is _only_ used for the `imag` binary itself. You do not need this
# feature and if you think you do you're doing it wrong.
pub_logging_initialization = []

# Enable testing functionality. Used for building the libimagrt for testing CLI
# apps. Do not use in production!
testing = []

