[package]
name = "libimagtimetrack"
version = "0.10.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
filters = "0.3"
chrono = "0.4"
toml = "0.4"
toml-query = "0.8"
lazy_static = "1"
is-match = "0.1"
failure  = "0.1"

libimagerror         = { version = "0.10.0", path = "../../../lib/core/libimagerror" }
libimagstore         = { version = "0.10.0", path = "../../../lib/core/libimagstore" }
libimagentrydatetime = { version = "0.10.0", path = "../../../lib/entry/libimagentrydatetime" }
libimagentrytag      = { version = "0.10.0", path = "../../../lib/entry/libimagentrytag" }
