[package]
name = "libimagtodo"
version = "0.9.1"
authors = ["mario <mario-krehl@gmx.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
task-hookrs = "0.6.0"
uuid = "0.7"
toml = "0.4"
toml-query = "0.8"
log = "0.4.0"
serde_json = "1"
failure = "0.1"

libimagstore = { version = "0.9.1", path = "../../../lib/core/libimagstore" }
libimagerror = { version = "0.9.1", path = "../../../lib/core/libimagerror" }
