[package]
name = "libimagentryannotation"
version = "0.9.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
lazy_static = "1"
toml = "0.4"
toml-query = { git = "https://github.com/matthiasbeyer/toml-query", branch = "failure" }
failure        = "0.1"
failure_derive = "0.1"

libimagstore     = { version = "0.9.0", path = "../../../lib/core/libimagstore" }
libimagerror     = { version = "0.9.0", path = "../../../lib/core/libimagerror" }
libimagentrylink = { version = "0.9.0", path = "../../../lib/entry/libimagentrylink" }
libimagentryutil = { version = "0.9.0", path = "../../../lib/entry/libimagentryutil" }
