[package]
name = "libimagentryfilter"
version = "0.9.1"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]

description = "Library for the imag core distribution"

keywords    = ["imag", "PIM", "personal", "information", "management"]
readme      = "../../../README.md"
license     = "LGPL-2.1"

documentation = "https://imag-pim.org/doc/"
repository    = "https://github.com/matthiasbeyer/imag"
homepage      = "http://imag-pim.org"

[badges]
travis-ci                         = { repository = "matthiasbeyer/imag" }
is-it-maintained-issue-resolution = { repository = "matthiasbeyer/imag" }
is-it-maintained-open-issues      = { repository = "matthiasbeyer/imag" }
maintenance                       = { status     = "actively-developed" }

[dependencies]
filters = "0.3"
itertools = "0.7"
log = "0.4.0"
regex = "1"
semver = "0.9"
toml = "0.4"
toml-query = "0.8"
failure        = "0.1"
failure_derive = "0.1"

libimagstore    = { version = "0.9.1", path = "../../../lib/core/libimagstore" }
libimagerror    = { version = "0.9.1", path = "../../../lib/core/libimagerror" }
libimagentrytag = { version = "0.9.1", path = "../../../lib/entry/libimagentrytag" }

[dependencies.clap]
version = "^2.29"
default-features = false
features = ["color", "suggestions"]

